# ComfyDock-Registry-Data

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: update_registry.yml
config/: output_schema.toml
docs/: node_mappings_schema.md  node_mappings_schema_condensed.md  schema_filtering.md  url_analysis.md
scripts/: refresh_metadata.py  test_metadata_override.sh
src/: augment_mappings.py  build_global_mappings.py  build_registry_cache.py  fetch_manager_data.py  registry_client.py  schema_filter.py  update_registry.py  url_utils.py  validate_data.py
tests/: README.md  test_phase2_optimization.py  test_phase_interaction_bug.py
tests/integration/: conftest.py  test_augmentation_edge_cases.py  test_multi_package_pipeline.py  test_recency_integration.py
tests/unit/: test_build_global_mappings.py  test_recency_scoring.py  test_schema_filter.py
