[project]
name = "comfydock-registry-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "comfydock-core",
]

[tool.uv.sources]
comfydock-core = { path = "../comfydock/packages/core", editable = true }
