[project]
name = "comfydock-registry-data"
version = "0.2.0"
description = "A repo to store and manage Comfy Registry cache data, as well as generate node_mappings.json for efficient node discovery."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "comfydock-core",
]

[tool.uv.sources]
comfydock-core = { path = "../comfydock/packages/core", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
